terraform/templates/manifests/ingress-backstage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: backstage
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ${BACKSTAGE_DOMAIN_NAME}
      http:
        paths:
          - path: /backstage(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backstage
                port:
                  number: 7007
