terraform/templates/manifests/ingress-gitea.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-gitea-path
  namespace: gitea
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${GITEA_DOMAIN_NAME}
      secretName: gitea-prod-tls
  rules:
    - host: ${GITEA_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-gitea-http
                port:
                  number: 3000
